@@ -8,7 +8,7 @@ semi60x60x60.bin     # volume ('uchar' format)
 1 60 10 50            # y: voxel size, dim, start/end indices 
 1 60 1  20            # z: voxel size, dim, start/end indices
 1                    # num of media
-1.0101010101 0.01 0.005 1.0  # scat(1/mm), g, mua (1/mm), n
+10 0.9 0.005 1.0  # scat(1/mm), g, mua (1/mm), n
 4	1            # detector number and radius (mm)
 30.0	20.0	1.0  # detector 1 position (mm)
 30.0	40.0	1.0  # ...
